--- a/index.html
+++ b/index.html
@@ -24,7 +24,21 @@
 			</main>
 			<footer class="footer">
 	<div class="footer__container _container">
-
+		<ul class="menu-footer__list">
+			<li>
+				<a href="">
+					<img class="menu-footer__logo" src="./img/logo/ohmyfood-white.svg" alt="logo">
+				</a>
+			</li>
+			<li><a href="" class="footer_link">
+				<img class="footer_svg" src="./img/icons/utensils.svg" alt="food">
+				Proposer un restaurant</a> </li>
+			<li><a href="" class="footer_link">
+				<img class="footer_svg" src="./img/icons/hands-helping.svg" alt="hand">
+				Devenir partenaire</a></li>
+			<li><a href="" class="footer_link">Mention légales</a></li>
+			<li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+		</ul>
 	</div>
 </footer>
 		</div>
