--- a/github.io-project3/index.html
+++ b/github.io-project3/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="fr">
-	@@include('_head.html',{
-	"title":"Ohmyfood"
-	})
+	 <head>
+	<title>Ohmyfood</title>
+	<meta charset="UTF-8">
+	<meta name="format-detection" content="telephone=no">
+	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="shortcut icon" href="favicon.ico">
+	<!-- <meta name="robots" content="noindex, nofollow"> -->
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 	<body>
 		<div class="wrapper">
-			@@include('_header.html',{})
+			<header class="header">
+	<div class="header__container _container">
+		<div class="header__content">						
+			<a href="" class="header_link">
+				<img class="header_svg" src="./img/logo/ohmyfood.png" alt="logo">
+			</a>
+		</div>
+	</div>
+</header>
 			<main class="page">
 				<section class="search">
 					<div class="search__container">
@@ -101,8 +116,29 @@
 					</div>
 				</section>
 			</main>
-			@@include('_footer.html',{})
+			<footer class="footer">
+	<div class="footer__container _container">
+		<ul class="menu-footer__list">
+			<li>
+				<a href="">
+					<img class="menu-footer__logo" src="./img/logo/ohmyfood-white.svg" alt="logo">
+				</a>
+			</li>
+			<li><a href="" class="footer_link">
+				<img class="footer_svg" src="./img/icons/utensils.svg" alt="food">
+				Proposer un restaurant</a> </li>
+			<li><a href="" class="footer_link">
+				<img class="footer_svg" src="./img/icons/hands-helping.svg" alt="hand">
+				Devenir partenaire</a></li>
+			<li><a href="" class="footer_link">Mention légales</a></li>
+			<li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+		</ul>
+	</div>
+</footer>
 		</div>
-		@@include('_js.html',{})
+		<!-- Swiper -->
+<!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
+<script src="js/vendors.min.js"></script>
+<script src="js/app.min.js"></script>
 	</body>
 </html>
