--- a/#src/_header_pages.html
+++ b/#src/_header_pages.html
@@ -1,8 +1,10 @@
 <header class="header">
 	<div class="header__container _container">
-		<div class="header__content">						
-			<a href="" class="header_link">
+		<div class="header__content__pages">						
+			<a href="./index.html" class="header_link">
 				<img class="header__arrow_svg" src="./img/icons/arrow-left.svg" alt="back">
+			</a>	
+			<a href="./index.html" class="header_link">
 				<img class="header_svg" src="./img/logo/ohmyfood.png" alt="logo">
 			</a>
 		</div>
