--- a/#src/index.html
+++ b/#src/index.html
@@ -17,7 +17,7 @@
 						<div class="search__more">
 							<h2 class="search__title _title">Réservez le menu qui<br /> vous convient</h2>
 							<p class="search__text">Découvrez des restaurants d'exception,<br /> séléctionnés par nos soins</p>
-							<button class="search_btn btn">Explorer nos restaurants</button>
+							<button class="search_btn main_btn btn">Explorer nos restaurants</button>
 						</div>
 					</div>
 				<!------------------------->				
@@ -45,56 +45,52 @@
 					<h2 class="resto__title _title">Restaurants</h2>
 					<div class="resto__container">						
 						<div class="resto__card__box">
-							<a href="">
+							<a href="./page1.html">
 								<div class="resto__img">
 									<img class="resto__img-img" src="./img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="resto">
 									<div class="resto__img__label">Nouveau</div>
 								</div>
 								<div class="resto__info">
-									<div class="resto__info__title">La palette du goût</div>
+									<h5 class="resto__info__title">La palette du goût</h5>
 									<div class="resto__info__text">Ménilmontant</div>
-									<img class="resto__info__svg" src="./img/icons/heart.svg" alt="like">
-									<img class="resto__info__svg-hov" src="./img/icons/heart-hover.svg" alt="like">
+									<div class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
 								</div>
 							</a>
 						</div>
 						<div class="resto__card__box">
-							<a href="">
+							<a href="./page2.html">
 								<div class="resto__img">
 									<img class="resto__img-img" src="./img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="resto">
 									<div class="resto__img__label">Nouveau</div>
 								</div>
 								<div class="resto__info">
-									<div class="resto__info__title">La note enchantée</div>
+									<h5 class="resto__info__title">La note enchantée</h5>
 									<div class="resto__info__text">Charonne</div>
-									<img class="resto__info__svg" src="./img/icons/heart.svg" alt="like">
-									<img class="resto__info__svg-hov" src="./img/icons/heart-hover.svg" alt="like">
+									<div class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
 								</div>
 							</a>
 						</div>
 						<div class="resto__card__box">
-							<a href="">
+							<a href="./page3.html">
 								<div class="resto__img">
 									<img class="resto__img-img" src="./img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="resto">
 								</div>
 								<div class="resto__info">
-									<div class="resto__info__title">À la française</div>
+									<h5 class="resto__info__title">À la française</h5>
 									<div class="resto__info__text">Cité Rouge</div>
-									<img class="resto__info__svg" src="./img/icons/heart.svg" alt="like">
-									<img class="resto__info__svg-hov" src="./img/icons/heart-hover.svg" alt="like">
+									<div class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
 								</div>
 							</a>
 						</div>
 						<div class="resto__card__box">
-							<a href="">
+							<a href="./page4.html">
 								<div class="resto__img">
 									<img class="resto__img-img" src="./img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="resto">
 								</div>
 								<div class="resto__info">
-									<div class="resto__info__title">Le délice des sens</div>
+									<h5 class="resto__info__title">Le délice des sens</h5>
 									<div class="resto__info__text">Folie-Méricourt</div>
-									<img class="resto__info__svg" src="./img/icons/heart.svg" alt="like">
-									<img class="resto__info__svg-hov" src="./img/icons/heart-hover.svg" alt="like">
+									<div class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
 								</div>
 							</a>
 						</div>
