--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -2,7 +2,7 @@
 	<div class="footer__container _container">
 		<ul class="menu-footer__list">
 			<li>
-				<a href="">
+				<a href="./index.html">
 					<img class="menu-footer__logo" src="./img/logo/ohmyfood-white.svg" alt="logo">
 				</a>
 			</li>
