--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<header class="header">
 	<div class="header__container _container">
 		<div class="header__content">						
-			<a href="" class="header_link">
+			<a href="./index.html" class="header_link">
 				<img class="header_svg" src="./img/logo/ohmyfood.png" alt="logo">
 			</a>
 		</div>
@@ -69,7 +69,7 @@
 								<div class="resto__info">
 									<h5 class="resto__info__title">La palette du goût</h5>
 									<div class="resto__info__text">Ménilmontant</div>
-									<div class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
+									<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
 								</div>
 							</a>
 						</div>
@@ -82,7 +82,7 @@
 								<div class="resto__info">
 									<h5 class="resto__info__title">La note enchantée</h5>
 									<div class="resto__info__text">Charonne</div>
-									<div class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
+									<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
 								</div>
 							</a>
 						</div>
@@ -94,7 +94,7 @@
 								<div class="resto__info">
 									<h5 class="resto__info__title">À la française</h5>
 									<div class="resto__info__text">Cité Rouge</div>
-									<div class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
+									<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
 								</div>
 							</a>
 						</div>
@@ -106,7 +106,7 @@
 								<div class="resto__info">
 									<h5 class="resto__info__title">Le délice des sens</h5>
 									<div class="resto__info__text">Folie-Méricourt</div>
-									<div class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
+									<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
 								</div>
 							</a>
 						</div>
@@ -117,7 +117,7 @@
 	<div class="footer__container _container">
 		<ul class="menu-footer__list">
 			<li>
-				<a href="">
+				<a href="./index.html">
 					<img class="menu-footer__logo" src="./img/logo/ohmyfood-white.svg" alt="logo">
 				</a>
 			</li>
