--- a/#src/_header.html
+++ b/#src/_header.html
@@ -1,7 +1,7 @@
 <header class="header">
 	<div class="header__container _container">
 		<div class="header__content">						
-			<a href="" class="header_link">
+			<a href="./index.html" class="header_link">
 				<img class="header_svg" src="./img/logo/ohmyfood.png" alt="logo">
 			</a>
 		</div>
