--- a/#src/index.html
+++ b/#src/index.html
@@ -53,7 +53,7 @@
 								<div class="resto__info">
 									<h5 class="resto__info__title">La palette du goût</h5>
 									<div class="resto__info__text">Ménilmontant</div>
-									<div class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
+									<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
 								</div>
 							</a>
 						</div>
@@ -66,7 +66,7 @@
 								<div class="resto__info">
 									<h5 class="resto__info__title">La note enchantée</h5>
 									<div class="resto__info__text">Charonne</div>
-									<div class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
+									<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
 								</div>
 							</a>
 						</div>
@@ -78,7 +78,7 @@
 								<div class="resto__info">
 									<h5 class="resto__info__title">À la française</h5>
 									<div class="resto__info__text">Cité Rouge</div>
-									<div class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
+									<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
 								</div>
 							</a>
 						</div>
@@ -90,7 +90,7 @@
 								<div class="resto__info">
 									<h5 class="resto__info__title">Le délice des sens</h5>
 									<div class="resto__info__text">Folie-Méricourt</div>
-									<div class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
+									<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
 								</div>
 							</a>
 						</div>
