--- a/#src/page1.html
+++ b/#src/page1.html
@@ -13,7 +13,7 @@
 							<img src="./img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="resto">
 						</div>
 						<div class="card__title__box">
-							<h2 class="card__title _title">La palette du goût</h2>
+							<h1 class="card__title _title_h1">La palette du goût</h1>
 							<div class="card__info__svg _heart"><i class="heart far fa-heart"></i></div>
 						</div>
 					</div>
