--- a/#src/page2.html
+++ b/#src/page2.html
@@ -13,7 +13,7 @@
 							<img src="./img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="resto">
 						</div>
 						<div class="card__title__box">
-							<h2 class="card__title _title">La note enchantée</h2>
+							<h1 class="card__title _title _title_h1">La note enchantée</h1>
 							<div class="card__info__svg _heart"><i class="heart far fa-heart"></i></div>
 						</div>
 					</div>
