--- a/#src/page4.html
+++ b/#src/page4.html
@@ -13,7 +13,7 @@
 							<img src="./img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="resto">
 						</div>
 						<div class="card__title__box">
-							<h2 class="card__title _title">Le délice des sens</h2>
+							<h1 class="card__title _title _title_h1">Le délice des sens</h1>
 							<div class="card__info__svg _heart"><i class="heart far fa-heart"></i></div>
 						</div>
 					</div>
