--- a/page3.html
+++ b/page3.html
@@ -32,7 +32,7 @@
 							<img src="./img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="resto">
 						</div>
 						<div class="card__title__box">
-							<h2 class="card__title _title">À la française</h2>
+							<h1 class="card__title _title _title_h1">À la française</h1>
 							<div class="card__info__svg _heart"><i class="heart far fa-heart"></i></div>
 						</div>
 					</div>
@@ -127,7 +127,7 @@
 	<div class="footer__container _container">
 		<ul class="menu-footer__list">
 			<li>
-				<a href="">
+				<a href="./index.html">
 					<img class="menu-footer__logo" src="./img/logo/ohmyfood-white.svg" alt="logo">
 				</a>
 			</li>
