--- a/#src/index.html
+++ b/#src/index.html
@@ -7,6 +7,9 @@
 		<div class="wrapper">
 			@@include('_header.html',{})
 			<main class="page">
+				<div class="loader">
+					<div class="lds-ellipsis"></div>
+				</div>
 				<section class="search">
 					<div class="search__container">
 						<div class="search__geo">
