--- a/#src/page1.html
+++ b/#src/page1.html
@@ -65,7 +65,7 @@
 							</div>
 						</button>
 						<button class="list__box _animation_3">
-							<h5 class="list__box-title">Filet de turbot</h5>
+							<h5 class="list__box-title">Filet de Turbot</h5>
 							<div class="list__box-text">Aux agrumes</div>
 							<div class="list__box-price">44€</div>
 							<div class="list__box-animation">
@@ -101,7 +101,9 @@
 							</div>
 						</button>
 					</div>
-					<div class="commander_btn main_btn btn">Commander</div>
+					<div class="commander_btn__container">
+						<div class="commander_btn main_btn btn">Commander</div>
+					</div>					
 				</div>
 			</main>
 			@@include('_footer.html',{})
