--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 	</div>
 </header>
 			<main class="page">
+				<div class="loader">
+					<div class="lds-ellipsis"></div>
+				</div>
 				<section class="search">
 					<div class="search__container">
 						<div class="search__geo">
