--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
 					<div class="fonction__container _container">
 						<h2 class="fonction__title _title">Fonctionnement</h2>
 						<button class="fonction__btn btn">
-							<div class="fonction__btn_span">1</div>
+							<span class="fonction__btn_span">1</span>
 							<img class="fonction__btn_svg" src="./img/icons/mobile-alt.svg" alt="phone">
 							Choisissez un restaurant
 						</button>
 						<button class="fonction__btn btn">
-							<div class="fonction__btn_span">2</div>
+							<span class="fonction__btn_span">2</span>
 							<img class="fonction__btn_svg" src="./img/icons/list.svg" alt="list">
 							Composez votre menu
 						</button>
 						<button class="fonction__btn btn">
-							<div class="fonction__btn_span">3</div>
+							<span class="fonction__btn_span">3</span>
 							<img class="fonction__btn_svg" src="./img/icons/store.svg" alt="store">
 							Dégustez au restaurant
 						</button>
