--- a/#src/page2.html
+++ b/#src/page2.html
@@ -10,7 +10,7 @@
 				<div class="page__container">
 					<div class="card">
 						<div class="card__image">
-							<img src="./img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="resto">
+							<img class="card__image-content" src="./img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="resto">
 						</div>
 						<div class="card__title__box">
 							<h1 class="card__title _title _title_h1">La note enchantée</h1>
