--- a/page1.html
+++ b/page1.html
@@ -29,7 +29,7 @@
 				<div class="page__container">
 					<div class="card">
 						<div class="card__image">
-							<img src="./img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="resto">
+							<img class="card__image-content" src="./img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="resto">
 						</div>
 						<div class="card__title__box">
 							<h1 class="card__title _title_h1">La palette du goût</h1>
