animation text, heart, logo-header center

--- a/#src/_header_pages.html
+++ b/#src/_header_pages.html
@@ -7,6 +7,7 @@
 			<a href="./index.html" class="header_link">
 				<img class="header_svg" src="./img/logo/ohmyfood.png" alt="logo">
 			</a>
+			<a href=""></a>
 		</div>
 	</div>
 </header>
