--- a/page4.html
+++ b/page4.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<link rel="stylesheet" href="css/style.min.css">
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="./img/icons/heart.svg">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,6 +22,7 @@
 			<a href="./index.html" class="header_link">
 				<img class="header_svg" src="./img/logo/ohmyfood.png" alt="logo">
 			</a>
+			<a href=""></a>
 		</div>
 	</div>
 </header>
@@ -143,9 +144,5 @@
 	</div>
 </footer>
 		</div>
-		<!-- Swiper -->
-<!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
-<script src="js/vendors.min.js"></script>
-<script src="js/app.min.js"></script>
 	</body>
 </html>
