--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						</div>
 						<div class="search__more">
 							<h2 class="search__title _title">Réservez le menu qui<br /> vous convient</h2>
-							<p class="search__text">Découvrez des restaurants d'exception,<br /> séléctionnés par nos soins</p>
+							<p class="search__text">Découvrez des restaurants d'exception,<br /> séléctionnés par nos soins.</p>
 							<button class="search_btn main_btn btn">Explorer nos restaurants</button>
 						</div>
 					</div>
