--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 	<meta name="format-detection" content="telephone=no">
 	<link rel="stylesheet" href="css/style.min.css">
 	<link rel="shortcut icon" href="./img/icons/heart.svg">
-	<!-- <meta name="robots" content="noindex, nofollow"> -->
-	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="robots" content="index, follow"> 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<script src="https://kit.fontawesome.com/1899c55c92.js" crossorigin="anonymous"></script>
 </head>
 	<body>
@@ -60,58 +59,60 @@
 					</div>
 				</section>
 				<!-------------------------------------------------------------------------------------->
-				<section class="resto  _container">
-					<h2 class="resto__title _title">Restaurants</h2>
-					<div class="resto__container">						
-						<div class="resto__card__box">
-							<a href="./page1.html">
-								<div class="resto__img">
-									<img class="resto__img-img" src="./img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="resto">
-									<div class="resto__img__label">Nouveau</div>
-								</div>
-								<div class="resto__info">
-									<h5 class="resto__info__title">La palette du goût</h5>
-									<div class="resto__info__text">Ménilmontant</div>
-									<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
-								</div>
-							</a>
-						</div>
-						<div class="resto__card__box">
-							<a href="./page2.html">
-								<div class="resto__img">
-									<img class="resto__img-img" src="./img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="resto">
-									<div class="resto__img__label">Nouveau</div>
-								</div>
-								<div class="resto__info">
-									<h5 class="resto__info__title">La note enchantée</h5>
-									<div class="resto__info__text">Charonne</div>
-									<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
-								</div>
-							</a>
-						</div>
-						<div class="resto__card__box">
-							<a href="./page3.html">
-								<div class="resto__img">
-									<img class="resto__img-img" src="./img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="resto">
-								</div>
-								<div class="resto__info">
-									<h5 class="resto__info__title">À la française</h5>
-									<div class="resto__info__text">Cité Rouge</div>
-									<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
-								</div>
-							</a>
-						</div>
-						<div class="resto__card__box">
-							<a href="./page4.html">
-								<div class="resto__img">
-									<img class="resto__img-img" src="./img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="resto">
-								</div>
-								<div class="resto__info">
-									<h5 class="resto__info__title">Le délice des sens</h5>
-									<div class="resto__info__text">Folie-Méricourt</div>
-									<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
-								</div>
-							</a>
+				<section class="restaurants">
+					<div class="resto _container">
+						<h2 class="resto__title _title">Restaurants</h2>
+						<div class="resto__container">						
+							<div class="resto__card__box">
+								<a href="./page1.html">
+									<div class="resto__img">
+										<img class="resto__img-img" src="./img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="resto">
+										<div class="resto__img__label">Nouveau</div>
+									</div>
+									<div class="resto__info">
+										<h5 class="resto__info__title">La palette du goût</h5>
+										<div class="resto__info__text">Ménilmontant</div>
+										<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
+									</div>
+								</a>
+							</div>
+							<div class="resto__card__box">
+								<a href="./page2.html">
+									<div class="resto__img">
+										<img class="resto__img-img" src="./img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="resto">
+										<div class="resto__img__label">Nouveau</div>
+									</div>
+									<div class="resto__info">
+										<h5 class="resto__info__title">La note enchantée</h5>
+										<div class="resto__info__text">Charonne</div>
+										<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
+									</div>
+								</a>
+							</div>
+							<div class="resto__card__box">
+								<a href="./page3.html">
+									<div class="resto__img">
+										<img class="resto__img-img" src="./img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="resto">
+									</div>
+									<div class="resto__info">
+										<h5 class="resto__info__title">À la française</h5>
+										<div class="resto__info__text">Cité Rouge</div>
+										<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
+									</div>
+								</a>
+							</div>
+							<div class="resto__card__box">
+								<a href="./page4.html">
+									<div class="resto__img">
+										<img class="resto__img-img" src="./img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="resto">
+									</div>
+									<div class="resto__info">
+										<h5 class="resto__info__title">Le délice des sens</h5>
+										<div class="resto__info__text">Folie-Méricourt</div>
+										<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
+									</div>
+								</a>
+							</div>
 						</div>
 					</div>
 				</section>
