--- a/#src/_head.html
+++ b/#src/_head.html
@@ -4,8 +4,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<link rel="stylesheet" href="css/style.min.css">
 	<link rel="shortcut icon" href="./img/icons/heart.svg">
-	<!-- <meta name="robots" content="noindex, nofollow"> -->
-	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="robots" content="index, follow"> 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<script src="https://kit.fontawesome.com/1899c55c92.js" crossorigin="anonymous"></script>
 </head>
