--- a/#src/index.html
+++ b/#src/index.html
@@ -44,58 +44,60 @@
 					</div>
 				</section>
 				<!-------------------------------------------------------------------------------------->
-				<section class="resto  _container">
-					<h2 class="resto__title _title">Restaurants</h2>
-					<div class="resto__container">						
-						<div class="resto__card__box">
-							<a href="./page1.html">
-								<div class="resto__img">
-									<img class="resto__img-img" src="./img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="resto">
-									<div class="resto__img__label">Nouveau</div>
-								</div>
-								<div class="resto__info">
-									<h5 class="resto__info__title">La palette du goût</h5>
-									<div class="resto__info__text">Ménilmontant</div>
-									<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
-								</div>
-							</a>
-						</div>
-						<div class="resto__card__box">
-							<a href="./page2.html">
-								<div class="resto__img">
-									<img class="resto__img-img" src="./img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="resto">
-									<div class="resto__img__label">Nouveau</div>
-								</div>
-								<div class="resto__info">
-									<h5 class="resto__info__title">La note enchantée</h5>
-									<div class="resto__info__text">Charonne</div>
-									<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
-								</div>
-							</a>
-						</div>
-						<div class="resto__card__box">
-							<a href="./page3.html">
-								<div class="resto__img">
-									<img class="resto__img-img" src="./img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="resto">
-								</div>
-								<div class="resto__info">
-									<h5 class="resto__info__title">À la française</h5>
-									<div class="resto__info__text">Cité Rouge</div>
-									<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
-								</div>
-							</a>
-						</div>
-						<div class="resto__card__box">
-							<a href="./page4.html">
-								<div class="resto__img">
-									<img class="resto__img-img" src="./img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="resto">
-								</div>
-								<div class="resto__info">
-									<h5 class="resto__info__title">Le délice des sens</h5>
-									<div class="resto__info__text">Folie-Méricourt</div>
-									<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
-								</div>
-							</a>
+				<section class="restaurants">
+					<div class="resto _container">
+						<h2 class="resto__title _title">Restaurants</h2>
+						<div class="resto__container">						
+							<div class="resto__card__box">
+								<a href="./page1.html">
+									<div class="resto__img">
+										<img class="resto__img-img" src="./img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="resto">
+										<div class="resto__img__label">Nouveau</div>
+									</div>
+									<div class="resto__info">
+										<h5 class="resto__info__title">La palette du goût</h5>
+										<div class="resto__info__text">Ménilmontant</div>
+										<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
+									</div>
+								</a>
+							</div>
+							<div class="resto__card__box">
+								<a href="./page2.html">
+									<div class="resto__img">
+										<img class="resto__img-img" src="./img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="resto">
+										<div class="resto__img__label">Nouveau</div>
+									</div>
+									<div class="resto__info">
+										<h5 class="resto__info__title">La note enchantée</h5>
+										<div class="resto__info__text">Charonne</div>
+										<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
+									</div>
+								</a>
+							</div>
+							<div class="resto__card__box">
+								<a href="./page3.html">
+									<div class="resto__img">
+										<img class="resto__img-img" src="./img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="resto">
+									</div>
+									<div class="resto__info">
+										<h5 class="resto__info__title">À la française</h5>
+										<div class="resto__info__text">Cité Rouge</div>
+										<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
+									</div>
+								</a>
+							</div>
+							<div class="resto__card__box">
+								<a href="./page4.html">
+									<div class="resto__img">
+										<img class="resto__img-img" src="./img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="resto">
+									</div>
+									<div class="resto__info">
+										<h5 class="resto__info__title">Le délice des sens</h5>
+										<div class="resto__info__text">Folie-Méricourt</div>
+										<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
+									</div>
+								</a>
+							</div>
 						</div>
 					</div>
 				</section>
