--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" href="css/style.min.css">
 	<link rel="shortcut icon" href="./img/icons/heart.svg">
 	<meta name="robots" content="index, follow"> 
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+	<!--<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://kit.fontawesome.com/1899c55c92.js" crossorigin="anonymous"></script>
 </head>
 	<body>
@@ -72,7 +73,7 @@
 									<div class="resto__info">
 										<h5 class="resto__info__title">La palette du goût</h5>
 										<div class="resto__info__text">Ménilmontant</div>
-										<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
+										<div role="button" class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
 									</div>
 								</a>
 							</div>
@@ -85,7 +86,7 @@
 									<div class="resto__info">
 										<h5 class="resto__info__title">La note enchantée</h5>
 										<div class="resto__info__text">Charonne</div>
-										<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
+										<div role="button" class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
 									</div>
 								</a>
 							</div>
@@ -97,7 +98,7 @@
 									<div class="resto__info">
 										<h5 class="resto__info__title">À la française</h5>
 										<div class="resto__info__text">Cité Rouge</div>
-										<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
+										<div role="button" class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
 									</div>
 								</a>
 							</div>
@@ -109,7 +110,7 @@
 									<div class="resto__info">
 										<h5 class="resto__info__title">Le délice des sens</h5>
 										<div class="resto__info__text">Folie-Méricourt</div>
-										<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
+										<div role="button" class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
 									</div>
 								</a>
 							</div>
