--- a/#src/index.html
+++ b/#src/index.html
@@ -57,7 +57,7 @@
 									<div class="resto__info">
 										<h5 class="resto__info__title">La palette du goût</h5>
 										<div class="resto__info__text">Ménilmontant</div>
-										<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
+										<div role="button" class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
 									</div>
 								</a>
 							</div>
@@ -70,7 +70,7 @@
 									<div class="resto__info">
 										<h5 class="resto__info__title">La note enchantée</h5>
 										<div class="resto__info__text">Charonne</div>
-										<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
+										<div role="button" class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
 									</div>
 								</a>
 							</div>
@@ -82,7 +82,7 @@
 									<div class="resto__info">
 										<h5 class="resto__info__title">À la française</h5>
 										<div class="resto__info__text">Cité Rouge</div>
-										<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
+										<div role="button" class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
 									</div>
 								</a>
 							</div>
@@ -94,7 +94,7 @@
 									<div class="resto__info">
 										<h5 class="resto__info__title">Le délice des sens</h5>
 										<div class="resto__info__text">Folie-Méricourt</div>
-										<button class="resto__info__svg _heart"><i class="heart far fa-heart"></i></button>
+										<div role="button" class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
 									</div>
 								</a>
 							</div>
