--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 									<div class="resto__info">
 										<h5 class="resto__info__title">La palette du goût</h5>
 										<div class="resto__info__text">Ménilmontant</div>
-										<div role="button" class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
+										<div class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
 									</div>
 								</a>
 							</div>
@@ -86,7 +86,7 @@
 									<div class="resto__info">
 										<h5 class="resto__info__title">La note enchantée</h5>
 										<div class="resto__info__text">Charonne</div>
-										<div role="button" class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
+										<div class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
 									</div>
 								</a>
 							</div>
@@ -98,7 +98,7 @@
 									<div class="resto__info">
 										<h5 class="resto__info__title">À la française</h5>
 										<div class="resto__info__text">Cité Rouge</div>
-										<div role="button" class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
+										<div class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
 									</div>
 								</a>
 							</div>
@@ -110,7 +110,7 @@
 									<div class="resto__info">
 										<h5 class="resto__info__title">Le délice des sens</h5>
 										<div class="resto__info__text">Folie-Méricourt</div>
-										<div role="button" class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
+										<div class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
 									</div>
 								</a>
 							</div>
