--- a/#src/page3.html
+++ b/#src/page3.html
@@ -1,110 +1,112 @@
 <!DOCTYPE html>
 <html lang="fr">
-	@@include('_head.html',{
-	"title":"Ohmyfood"
-	})
-	<body>
-		<div class="wrapper">
-			@@include('_header_pages.html',{})
-			<main class="page">
-				<div class="page__container">
-					<div class="card">
-						<div class="card__image">
-							<img class="card__image-content" src="./img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="resto">
-						</div>
-						<div class="card__title__box">
-							<h1 class="card__title _title _title_h1">À la française</h1>
-							<div class="card__info__svg _heart"><i class="heart far fa-heart"></i></div>
-						</div>
+@@include('_head.html',{
+"title":"Ohmyfood"
+})
+
+<body>
+	<div class="wrapper">
+		@@include('_header_pages.html',{})
+		<main class="page">
+			<div class="page__container">
+				<div class="card">
+					<div class="card__image">
+						<img class="card__image-content" src="./img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="resto">
 					</div>
-					<div class="list list-entrees">
-						<h3 class="list__title">ENTRÉES</h3>
-						<div class="list__line"></div>
-						<button class="list__box _animation_1">
-							<h5 class="list__box-title">Tartare de poulpe acidulé</h5>
-							<div class="list__box-text">Aux zestes d'orange</div>
-							<div class="list__box-price">25€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_2">
-							<h5 class="list__box-title">Velouté de légumes d'antan</h5>
-							<div class="list__box-text">Carotte, panais, topinambour</div>
-							<div class="list__box-price">35€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_3">
-							<h5 class="list__box-title">Soupe à l'oignon</h5>
-							<div class="list__box-text">Revisitée</div>
-							<div class="list__box-price">20€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
+					<div class="card__title__box">
+						<h1 class="card__title _title _title_h1">À la française</h1>
+						<div class="card__info__svg _heart"><i class="heart far fa-heart"></i></div>
 					</div>
-					<div class="list list-plats">
-						<h3 class="list__title">PLATS</h3>
-						<div class="list__line"></div>
-						<button class="list__box _animation_1">
-							<h5 class="list__box-title">Coquilles Saint-Jacques</h5>
-							<div class="list__box-text">Accompagnées d'une purée de panais</div>
-							<div class="list__box-price">40€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_2">
-							<h5 class="list__box-title">Magret de canard</h5>
-							<div class="list__box-text">Et parmentier de pommes de terre</div>
-							<div class="list__box-price">35€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_3">
-							<h5 class="list__box-title">Pigeonneau d’Ille-et-Vilaine</h5>
-							<div class="list__box-text">Sur son lit de gnocchis aux légumes</div>
-							<div class="list__box-price">44€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-					</div>
-					<div class="list list-desserts">
-						<h3 class="list__title">DESSERTS</h3>
-						<div class="list__line"></div>
-						<button class="list__box _animation_1">
-							<h5 class="list__box-title">Pétales de violettes glacés</h5>
-							<div class="list__box-text">Et purée de noisettes</div>
-							<div class="list__box-price">18€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_2">
-							<h5 class="list__box-title">Fondant au chocolat</h5>
-							<div class="list__box-text">Revisité</div>
-							<div class="list__box-price">22€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_3">
-							<h5 class="list__box-title">Millefeuille croustillant </h5>
-							<div class="list__box-text">Myrtilles et pâte d’amande</div>
-							<div class="list__box-price">23€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-					</div>
-					<div class="commander_btn main_btn btn">Commander</div>
 				</div>
-			</main>
-			@@include('_footer.html',{})
-		</div>
-	</body>
+				<div class="list list-entrees">
+					<h3 class="list__title">ENTRÉES</h3>
+					<div class="list__line"></div>
+					<div class="list__box _animation_1">
+						<h5 class="list__box-title">Tartare de poulpe acidulé</h5>
+						<div class="list__box-text">Aux zestes d'orange</div>
+						<div class="list__box-price">25€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_2">
+						<h5 class="list__box-title">Velouté de légumes d'antan</h5>
+						<div class="list__box-text">Carotte, panais, topinambour</div>
+						<div class="list__box-price">35€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_3">
+						<h5 class="list__box-title">Soupe à l'oignon</h5>
+						<div class="list__box-text">Revisitée</div>
+						<div class="list__box-price">20€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+				</div>
+				<div class="list list-plats">
+					<h3 class="list__title">PLATS</h3>
+					<div class="list__line"></div>
+					<div class="list__box _animation_1">
+						<h5 class="list__box-title">Coquilles Saint-Jacques</h5>
+						<div class="list__box-text">Accompagnées d'une purée de panais</div>
+						<div class="list__box-price">40€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_2">
+						<h5 class="list__box-title">Magret de canard</h5>
+						<div class="list__box-text">Et parmentier de pommes de terre</div>
+						<div class="list__box-price">35€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_3">
+						<h5 class="list__box-title">Pigeonneau d’Ille-et-Vilaine</h5>
+						<div class="list__box-text">Sur son lit de gnocchis aux légumes</div>
+						<div class="list__box-price">44€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+				</div>
+				<div class="list list-desserts">
+					<h3 class="list__title">DESSERTS</h3>
+					<div class="list__line"></div>
+					<div class="list__box _animation_1">
+						<h5 class="list__box-title">Pétales de violettes glacés</h5>
+						<div class="list__box-text">Et purée de noisettes</div>
+						<div class="list__box-price">18€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_2">
+						<h5 class="list__box-title">Fondant au chocolat</h5>
+						<div class="list__box-text">Revisité</div>
+						<div class="list__box-price">22€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_3">
+						<h5 class="list__box-title">Millefeuille croustillant </h5>
+						<div class="list__box-text">Myrtilles et pâte d’amande</div>
+						<div class="list__box-price">23€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+				</div>
+				<div class="commander_btn main_btn btn">Commander</div>
+			</div>
+		</main>
+		@@include('_footer.html',{})
+	</div>
+</body>
+
 </html>
