--- a/#src/page1.html
+++ b/#src/page1.html
@@ -1,112 +1,115 @@
 <!DOCTYPE html>
 <html lang="fr">
-	@@include('_head.html',{
-	"title":"Ohmyfood"
-	})
-	<body>
-		<div class="wrapper">
-			@@include('_header_pages.html',{})
-			<main class="page">
-				<div class="page__container">
-					<div class="card">
-						<div class="card__image">
-							<img class="card__image-content" src="./img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="resto">
-						</div>
-						<div class="card__title__box">
-							<h1 class="card__title _title_h1">La palette du goût</h1>
-							<div class="card__info__svg _heart"><i class="heart far fa-heart"></i></div>
-						</div>
+@@include('_head.html',{
+"title":"Ohmyfood"
+})
+
+<body>
+	<div class="wrapper">
+		@@include('_header_pages.html',{})
+		<main class="page">
+			<div class="page__container">
+				<div class="card">
+					<div class="card__image">
+						<img class="card__image-content" src="./img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+							alt="resto">
 					</div>
-					<div class="list list-entrees">
-						<h3 class="list__title">ENTRÉES</h3>
-						<div class="list__line"></div>
-						<button class="list__box _animation_1">
-							<h5 class="list__box-title">Fricassée d'éscargot</h5>
-							<div class="list__box-text">Au piment d'espelette</div>
-							<div class="list__box-price">25€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_2">
-							<h5 class="list__box-title">Foie gras de canard mi-cuit</h5>
-							<div class="list__box-text">Et ses copeaux de truffe noire</div>
-							<div class="list__box-price">35€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_3">
-							<h5 class="list__box-title">Oeuf au plat</h5>
-							<div class="list__box-text">Assaisonné à la truffe sur lit de caviar</div>
-							<div class="list__box-price">20€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
+					<div class="card__title__box">
+						<h1 class="card__title _title_h1">La palette du goût</h1>
+						<div class="card__info__svg _heart"><i class="heart far fa-heart"></i></div>
 					</div>
-					<div class="list list-plats">
-						<h3 class="list__title">PLATS</h3>
-						<div class="list__line"></div>
-						<button class="list__box _animation_1">
-							<h5 class="list__box-title">Filet de boeuf aux herbes</h5>
-							<div class="list__box-text">Accompagné de sa ribambelle de légumes</div>
-							<div class="list__box-price">40€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_2">
-							<h5 class="list__box-title">Parmentier de queue de boeuf</h5>
-							<div class="list__box-text">À la truffe noire sur sa purée de panais</div>
-							<div class="list__box-price">35€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_3">
-							<h5 class="list__box-title">Filet de Turbot</h5>
-							<div class="list__box-text">Aux agrumes</div>
-							<div class="list__box-price">44€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-					</div>
-					<div class="list list-desserts">
-						<h3 class="list__title">DESSERTS</h3>
-						<div class="list__line"></div>
-						<button class="list__box _animation_1">
-							<h5 class="list__box-title">Paris-Brest</h5>
-							<div class="list__box-text">Revisité</div>
-							<div class="list__box-price">18€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_2">
-							<h5 class="list__box-title">Macaron au chocolat d'exception</h5>
-							<div class="list__box-text">Et glace à la vanille de Madagascar</div>
-							<div class="list__box-price">22€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_3">
-							<h5 class="list__box-title">Mousse au chocolat </h5>
-							<div class="list__box-text">Au piment d'Espelette et à la truffe noire</div>
-							<div class="list__box-price">23€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-					</div>
-					<div class="commander_btn__container">
-						<div class="commander_btn main_btn btn">Commander</div>
-					</div>					
 				</div>
-			</main>
-			@@include('_footer.html',{})
-		</div>
-	</body>
+				<div class="list list-entrees">
+					<h3 class="list__title">ENTRÉES</h3>
+					<div class="list__line"></div>
+					<div class="list__box _animation_1">
+						<h5 class="list__box-title">Fricassée d'éscargot</h5>
+						<div class="list__box-text">Au piment d'espelette</div>
+						<div class="list__box-price">25€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_2">
+						<h5 class="list__box-title">Foie gras de canard mi-cuit</h5>
+						<div class="list__box-text">Et ses copeaux de truffe noire</div>
+						<div class="list__box-price">35€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_3">
+						<h5 class="list__box-title">Oeuf au plat</h5>
+						<div class="list__box-text">Assaisonné à la truffe sur lit de caviar</div>
+						<div class="list__box-price">20€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+				</div>
+				<div class="list list-plats">
+					<h3 class="list__title">PLATS</h3>
+					<div class="list__line"></div>
+					<div class="list__box _animation_1">
+						<h5 class="list__box-title">Filet de boeuf aux herbes</h5>
+						<div class="list__box-text">Accompagné de sa ribambelle de légumes</div>
+						<div class="list__box-price">40€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_2">
+						<h5 class="list__box-title">Parmentier de queue de boeuf</h5>
+						<div class="list__box-text">À la truffe noire sur sa purée de panais</div>
+						<div class="list__box-price">35€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_3">
+						<h5 class="list__box-title">Filet de Turbot</h5>
+						<div class="list__box-text">Aux agrumes</div>
+						<div class="list__box-price">44€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+				</div>
+				<div class="list list-desserts">
+					<h3 class="list__title">DESSERTS</h3>
+					<div class="list__line"></div>
+					<div class="list__box _animation_1">
+						<h5 class="list__box-title">Paris-Brest</h5>
+						<div class="list__box-text">Revisité</div>
+						<div class="list__box-price">18€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_2">
+						<h5 class="list__box-title">Macaron au chocolat d'exception</h5>
+						<div class="list__box-text">Et glace à la vanille de Madagascar</div>
+						<div class="list__box-price">22€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_3">
+						<h5 class="list__box-title">Mousse au chocolat </h5>
+						<div class="list__box-text">Au piment d'Espelette et à la truffe noire</div>
+						<div class="list__box-price">23€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+				</div>
+				<div class="commander_btn__container">
+					<div class="commander_btn main_btn btn">Commander</div>
+				</div>
+			</div>
+		</main>
+		@@include('_footer.html',{})
+	</div>
+</body>
+
 </html>
