--- a/#src/page4.html
+++ b/#src/page4.html
@@ -1,110 +1,113 @@
 <!DOCTYPE html>
 <html lang="fr">
-	@@include('_head.html',{
-	"title":"Ohmyfood"
-	})
-	<body>
-		<div class="wrapper">
-			@@include('_header_pages.html',{})
-			<main class="page">
-				<div class="page__container">
-					<div class="card">
-						<div class="card__image">
-							<img class="card__image-content" src="./img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="resto">
-						</div>
-						<div class="card__title__box">
-							<h1 class="card__title _title _title_h1">Le délice des sens</h1>
-							<div class="card__info__svg _heart"><i class="heart far fa-heart"></i></div>
-						</div>
+@@include('_head.html',{
+"title":"Ohmyfood"
+})
+
+<body>
+	<div class="wrapper">
+		@@include('_header_pages.html',{})
+		<main class="page">
+			<div class="page__container">
+				<div class="card">
+					<div class="card__image">
+						<img class="card__image-content" src="./img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+							alt="resto">
 					</div>
-					<div class="list list-entrees">
-						<h3 class="list__title">ENTRÉES</h3>
-						<div class="list__line"></div>
-						<button class="list__box _animation_1">
-							<h5 class="list__box-title">Tartare de thon</h5>
-							<div class="list__box-text">Assaisonné au yuzu</div>
-							<div class="list__box-price">25€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_2">
-							<h5 class="list__box-title">Bouchée de homard croustillant</h5>
-							<div class="list__box-text">Et sa farandole de petits légumes</div>
-							<div class="list__box-price">35€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_3">
-							<h5 class="list__box-title">Velouté de cèpes</h5>
-							<div class="list__box-text">Aux truffes</div>
-							<div class="list__box-price">20€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
+					<div class="card__title__box">
+						<h1 class="card__title _title _title_h1">Le délice des sens</h1>
+						<div class="card__info__svg _heart"><i class="heart far fa-heart"></i></div>
 					</div>
-					<div class="list list-plats">
-						<h3 class="list__title">PLATS</h3>
-						<div class="list__line"></div>
-						<button class="list__box _animation_1">
-							<h5 class="list__box-title">Poulet rôti aux herbes de Provence</h5>
-							<div class="list__box-text">Et sa crème de truffe</div>
-							<div class="list__box-price">40€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_2">
-							<h5 class="list__box-title">Langouste rôtie</h5>
-							<div class="list__box-text">Et ses légumes de saison</div>
-							<div class="list__box-price">35€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_3">
-							<h5 class="list__box-title">Côte de boeuf Angus</h5>
-							<div class="list__box-text">Et sa purée de panais</div>
-							<div class="list__box-price">44€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-					</div>
-					<div class="list list-desserts">
-						<h3 class="list__title">DESSERTS</h3>
-						<div class="list__line"></div>
-						<button class="list__box _animation_1">
-							<h5 class="list__box-title">Farandole de desserts</h5>
-							<div class="list__box-text">Du chef</div>
-							<div class="list__box-price">18€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_2">
-							<h5 class="list__box-title">Crème brulée</h5>
-							<div class="list__box-text">Revisitée</div>
-							<div class="list__box-price">22€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_3">
-							<h5 class="list__box-title">Tiramisu</h5>
-							<div class="list__box-text">À la noisette</div>
-							<div class="list__box-price">23€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-					</div>
-					<div class="commander_btn main_btn btn">Commander</div>
 				</div>
-			</main>
-			@@include('_footer.html',{})
-		</div>
-	</body>
+				<div class="list list-entrees">
+					<h3 class="list__title">ENTRÉES</h3>
+					<div class="list__line"></div>
+					<div class="list__box _animation_1">
+						<h5 class="list__box-title">Tartare de thon</h5>
+						<div class="list__box-text">Assaisonné au yuzu</div>
+						<div class="list__box-price">25€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_2">
+						<h5 class="list__box-title">Bouchée de homard croustillant</h5>
+						<div class="list__box-text">Et sa farandole de petits légumes</div>
+						<div class="list__box-price">35€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_3">
+						<h5 class="list__box-title">Velouté de cèpes</h5>
+						<div class="list__box-text">Aux truffes</div>
+						<div class="list__box-price">20€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+				</div>
+				<div class="list list-plats">
+					<h3 class="list__title">PLATS</h3>
+					<div class="list__line"></div>
+					<div class="list__box _animation_1">
+						<h5 class="list__box-title">Poulet rôti aux herbes de Provence</h5>
+						<div class="list__box-text">Et sa crème de truffe</div>
+						<div class="list__box-price">40€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_2">
+						<h5 class="list__box-title">Langouste rôtie</h5>
+						<div class="list__box-text">Et ses légumes de saison</div>
+						<div class="list__box-price">35€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_3">
+						<h5 class="list__box-title">Côte de boeuf Angus</h5>
+						<div class="list__box-text">Et sa purée de panais</div>
+						<div class="list__box-price">44€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+				</div>
+				<div class="list list-desserts">
+					<h3 class="list__title">DESSERTS</h3>
+					<div class="list__line"></div>
+					<div class="list__box _animation_1">
+						<h5 class="list__box-title">Farandole de desserts</h5>
+						<div class="list__box-text">Du chef</div>
+						<div class="list__box-price">18€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_2">
+						<h5 class="list__box-title">Crème brulée</h5>
+						<div class="list__box-text">Revisitée</div>
+						<div class="list__box-price">22€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_3">
+						<h5 class="list__box-title">Tiramisu</h5>
+						<div class="list__box-text">À la noisette</div>
+						<div class="list__box-price">23€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+				</div>
+				<div class="commander_btn main_btn btn">Commander</div>
+			</div>
+		</main>
+		@@include('_footer.html',{})
+	</div>
+</body>
+
 </html>
