--- a/page2.html
+++ b/page2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-	 <head>
+ <head>
 	<title>Ohmyfood</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
@@ -11,9 +11,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://kit.fontawesome.com/1899c55c92.js" crossorigin="anonymous"></script>
 </head>
-	<body>
-		<div class="wrapper">
-			<header class="header">
+
+<body>
+	<div class="wrapper">
+		<header class="header">
 	<div class="header__container _container">
 		<div class="header__content__pages">						
 			<a href="./index.html" class="header_link">
@@ -26,113 +27,113 @@
 		</div>
 	</div>
 </header>
-			<main class="page">
-				<div class="page__container">
-					<div class="card">
-						<div class="card__image">
-							<img class="card__image-content" src="./img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="resto">
-						</div>
-						<div class="card__title__box">
-							<h1 class="card__title _title _title_h1">La note enchantée</h1>
-							<div class="card__info__svg _heart"><i class="heart far fa-heart"></i></div>
-						</div>
+		<main class="page">
+			<div class="page__container">
+				<div class="card">
+					<div class="card__image">
+						<img class="card__image-content" src="./img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="resto">
 					</div>
-					<div class="list list-entrees">
-						<h3 class="list__title">ENTRÉES</h3>
-						<div class="list__line"></div>
-						<button class="list__box _animation_1">
-							<h5 class="list__box-title">Ravioles de foie gras</h5>
-							<div class="list__box-text">Accompagnés de leur crème à la truffe</div>
-							<div class="list__box-price">25€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_2">
-							<h5 class="list__box-title">Caviar osciètre</h5>
-							<div class="list__box-text">Sur blini à la farine de blé noir</div>
-							<div class="list__box-price">35€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_3">
-							<h5 class="list__box-title">Homard et espuma de potiron</h5>
-							<div class="list__box-text">Mariné aux zestes d'orange</div>
-							<div class="list__box-price">20€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_2">
-							<h5 class="list__box-title">Foie gras de canard cuit entier</h5>
-							<div class="list__box-text">Confiture de figue et pain toasté</div>
-							<div class="list__box-price">35€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
+					<div class="card__title__box">
+						<h1 class="card__title _title _title_h1">La note enchantée</h1>
+						<div class="card__info__svg _heart"><i class="heart far fa-heart"></i></div>
 					</div>
-					<div class="list list-plats">
-						<h3 class="list__title">PLATS</h3>
-						<div class="list__line"></div>
-						<button class="list__box _animation_1">
-							<h5 class="list__box-title">Noix de coquilles Saint-Jacques</h5>
-							<div class="list__box-text">Sur lit de purée de céleri-rave</div>
-							<div class="list__box-price">40€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_2">
-							<h5 class="list__box-title">Langoustine poêlée</h5>
-							<div class="list__box-text">Purée de patate douce</div>
-							<div class="list__box-price">35€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_3">
-							<h5 class="list__box-title">Mijoté de queue de boeuf </h5>
-							<div class="list__box-text">Et riz sauvage aux zestes de citron</div>
-							<div class="list__box-price">44€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-					</div>
-					<div class="list list-desserts">
-						<h3 class="list__title">DESSERTS</h3>
-						<div class="list__line"></div>
-						<button class="list__box _animation_1">
-							<h5 class="list__box-title">Macaron noisette et chocolat</h5>
-							<div class="list__box-text">Glace au caramel brun et sel de Guérande</div>
-							<div class="list__box-price">18€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_2">
-							<h5 class="list__box-title">Baba au rhum revisité</h5>
-							<div class="list__box-text">Avec son coulis de citron</div>
-							<div class="list__box-price">22€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-						<button class="list__box _animation_3">
-							<h5 class="list__box-title">Tarte au citron meringuée </h5>
-							<div class="list__box-text">Déstructurée</div>
-							<div class="list__box-price">23€</div>
-							<div class="list__box-animation">
-								<i class="fas fa-check-circle list__box-animation_icon"></i>
-							</div>
-						</button>
-					</div>
-					<div class="commander_btn main_btn btn">Commander</div>
 				</div>
-			</main>
-			<footer class="footer">
+				<div class="list list-entrees">
+					<h3 class="list__title">ENTRÉES</h3>
+					<div class="list__line"></div>
+					<div class="list__box _animation_1">
+						<h5 class="list__box-title">Ravioles de foie gras</h5>
+						<div class="list__box-text">Accompagnés de leur crème à la truffe</div>
+						<div class="list__box-price">25€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_2">
+						<h5 class="list__box-title">Caviar osciètre</h5>
+						<div class="list__box-text">Sur blini à la farine de blé noir</div>
+						<div class="list__box-price">35€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_3">
+						<h5 class="list__box-title">Homard et espuma de potiron</h5>
+						<div class="list__box-text">Mariné aux zestes d'orange</div>
+						<div class="list__box-price">20€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_2">
+						<h5 class="list__box-title">Foie gras de canard cuit entier</h5>
+						<div class="list__box-text">Confiture de figue et pain toasté</div>
+						<div class="list__box-price">35€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+				</div>
+				<div class="list list-plats">
+					<h3 class="list__title">PLATS</h3>
+					<div class="list__line"></div>
+					<div class="list__box _animation_1">
+						<h5 class="list__box-title">Noix de coquilles Saint-Jacques</h5>
+						<div class="list__box-text">Sur lit de purée de céleri-rave</div>
+						<div class="list__box-price">40€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_2">
+						<h5 class="list__box-title">Langoustine poêlée</h5>
+						<div class="list__box-text">Purée de patate douce</div>
+						<div class="list__box-price">35€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_3">
+						<h5 class="list__box-title">Mijoté de queue de boeuf </h5>
+						<div class="list__box-text">Et riz sauvage aux zestes de citron</div>
+						<div class="list__box-price">44€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+				</div>
+				<div class="list list-desserts">
+					<h3 class="list__title">DESSERTS</h3>
+					<div class="list__line"></div>
+					<div class="list__box _animation_1">
+						<h5 class="list__box-title">Macaron noisette et chocolat</h5>
+						<div class="list__box-text">Glace au caramel brun et sel de Guérande</div>
+						<div class="list__box-price">18€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_2">
+						<h5 class="list__box-title">Baba au rhum revisité</h5>
+						<div class="list__box-text">Avec son coulis de citron</div>
+						<div class="list__box-price">22€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+					<div class="list__box _animation_3">
+						<h5 class="list__box-title">Tarte au citron meringuée </h5>
+						<div class="list__box-text">Déstructurée</div>
+						<div class="list__box-price">23€</div>
+						<div class="list__box-animation">
+							<i class="fas fa-check-circle list__box-animation_icon"></i>
+						</div>
+					</div>
+				</div>
+				<div class="commander_btn main_btn btn">Commander</div>
+			</div>
+		</main>
+		<footer class="footer">
 	<div class="footer__container _container">
 		<ul class="menu-footer__list">
 			<li>
@@ -151,6 +152,7 @@
 		</ul>
 	</div>
 </footer>
-		</div>
-	</body>
+	</div>
+</body>
+
 </html>
