--- a/page2.html
+++ b/page2.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
- <head>
+<head>
 	<title>Ohmyfood</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<link rel="stylesheet" href="css/style.min.css">
 	<link rel="shortcut icon" href="./img/icons/heart.svg">
-	<meta name="robots" content="index, follow"> 
+	<meta name="robots" content="index, follow">
 	<!--<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://kit.fontawesome.com/1899c55c92.js" crossorigin="anonymous"></script>
@@ -35,7 +35,10 @@
 					</div>
 					<div class="card__title__box">
 						<h1 class="card__title _title _title_h1">La note enchantée</h1>
-						<div class="card__info__svg _heart"><i class="heart far fa-heart"></i></div>
+						<div class="card__info__svg _heart">
+							<i class="heart far fa-heart"></i>
+							<i class="heart fas fa-heart"></i>
+						</div>
 					</div>
 				</div>
 				<div class="list list-entrees">
