--- a/#src/index.html
+++ b/#src/index.html
@@ -1,108 +1,124 @@
 <!DOCTYPE html>
 <html lang="fr">
-	@@include('_head.html',{
-	"title":"Ohmyfood"
-	})
-	<body>
-		<div class="wrapper">
-			@@include('_header.html',{})
-			<main class="page">
-				<div class="loader">
-					<div class="lds-ellipsis"></div>
+@@include('_head.html',{
+"title":"Ohmyfood"
+})
+
+<body>
+	<div class="wrapper">
+		@@include('_header.html',{})
+		<main class="page">
+			<div class="loader">
+				<div class="lds-ellipsis"></div>
+			</div>
+			<section class="search">
+				<div class="search__container">
+					<div class="search__geo">
+						<a href="" class="search__geo_link">
+							<img class="search_svg" src="./img/icons/map-marker-alt.svg" alt="map">
+							Paris, Bellevile</a>
+					</div>
+					<div class="search__more">
+						<h2 class="search__title _title">Réservez le menu qui<br /> vous convient</h2>
+						<p class="search__text">Découvrez des restaurants d'exception,<br /> séléctionnés par nos soins.</p>
+						<button class="search_btn main_btn btn">Explorer nos restaurants</button>
+					</div>
 				</div>
-				<section class="search">
-					<div class="search__container">
-						<div class="search__geo">
-							<a href="" class="search__geo_link">
-								<img class="search_svg" src="./img/icons/map-marker-alt.svg" alt="map">
-								Paris, Bellevile</a>
+				<!------------------------->
+				<div class="fonction__container _container">
+					<h2 class="fonction__title _title">Fonctionnement</h2>
+					<button class="fonction__btn btn">
+						<span class="fonction__btn_span">1</span>
+						<img class="fonction__btn_svg" src="./img/icons/mobile-alt.svg" alt="phone">
+						Choisissez un restaurant
+					</button>
+					<button class="fonction__btn btn">
+						<span class="fonction__btn_span">2</span>
+						<img class="fonction__btn_svg" src="./img/icons/list.svg" alt="list">
+						Composez votre menu
+					</button>
+					<button class="fonction__btn btn">
+						<span class="fonction__btn_span">3</span>
+						<img class="fonction__btn_svg" src="./img/icons/store.svg" alt="store">
+						Dégustez au restaurant
+					</button>
+				</div>
+			</section>
+			<!-------------------------------------------------------------------------------------->
+			<section class="restaurants">
+				<div class="resto _container">
+					<h2 class="resto__title _title">Restaurants</h2>
+					<div class="resto__container">
+						<div class="resto__card__box">
+							<a href="./page1.html">
+								<div class="resto__img">
+									<img class="resto__img-img" src="./img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+										alt="resto">
+									<div class="resto__img__label">Nouveau</div>
+								</div>
+								<div class="resto__info">
+									<h5 class="resto__info__title">La palette du goût</h5>
+									<div class="resto__info__text">Ménilmontant</div>
+									<div class="resto__info__svg _heart">
+										<i class="heart far fa-heart"></i>
+										<i class="heart fas fa-heart"></i>
+									</div>
+								</div>
+							</a>
 						</div>
-						<div class="search__more">
-							<h2 class="search__title _title">Réservez le menu qui<br /> vous convient</h2>
-							<p class="search__text">Découvrez des restaurants d'exception,<br /> séléctionnés par nos soins.</p>
-							<button class="search_btn main_btn btn">Explorer nos restaurants</button>
+						<div class="resto__card__box">
+							<a href="./page2.html">
+								<div class="resto__img">
+									<img class="resto__img-img" src="./img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="resto">
+									<div class="resto__img__label">Nouveau</div>
+								</div>
+								<div class="resto__info">
+									<h5 class="resto__info__title">La note enchantée</h5>
+									<div class="resto__info__text">Charonne</div>
+									<div class="resto__info__svg _heart">
+										<i class="heart far fa-heart"></i>
+										<i class="heart fas fa-heart"></i>
+									</div>
+								</div>
+							</a>
+						</div>
+						<div class="resto__card__box">
+							<a href="./page3.html">
+								<div class="resto__img">
+									<img class="resto__img-img" src="./img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="resto">
+								</div>
+								<div class="resto__info">
+									<h5 class="resto__info__title">À la française</h5>
+									<div class="resto__info__text">Cité Rouge</div>
+									<div class="resto__info__svg _heart">
+										<i class="heart far fa-heart"></i>
+										<i class="heart fas fa-heart"></i>
+									</div>
+								</div>
+							</a>
+						</div>
+						<div class="resto__card__box">
+							<a href="./page4.html">
+								<div class="resto__img">
+									<img class="resto__img-img" src="./img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+										alt="resto">
+								</div>
+								<div class="resto__info">
+									<h5 class="resto__info__title">Le délice des sens</h5>
+									<div class="resto__info__text">Folie-Méricourt</div>
+									<div class="resto__info__svg _heart">
+										<i class="heart far fa-heart"></i>
+										<i class="heart fas fa-heart"></i>
+									</div>
+								</div>
+							</a>
 						</div>
 					</div>
-				<!------------------------->				
-					<div class="fonction__container _container">
-						<h2 class="fonction__title _title">Fonctionnement</h2>
-						<button class="fonction__btn btn">
-							<span class="fonction__btn_span">1</span>
-							<img class="fonction__btn_svg" src="./img/icons/mobile-alt.svg" alt="phone">
-							Choisissez un restaurant
-						</button>
-						<button class="fonction__btn btn">
-							<span class="fonction__btn_span">2</span>
-							<img class="fonction__btn_svg" src="./img/icons/list.svg" alt="list">
-							Composez votre menu
-						</button>
-						<button class="fonction__btn btn">
-							<span class="fonction__btn_span">3</span>
-							<img class="fonction__btn_svg" src="./img/icons/store.svg" alt="store">
-							Dégustez au restaurant
-						</button>
-					</div>
-				</section>
-				<!-------------------------------------------------------------------------------------->
-				<section class="restaurants">
-					<div class="resto _container">
-						<h2 class="resto__title _title">Restaurants</h2>
-						<div class="resto__container">						
-							<div class="resto__card__box">
-								<a href="./page1.html">
-									<div class="resto__img">
-										<img class="resto__img-img" src="./img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="resto">
-										<div class="resto__img__label">Nouveau</div>
-									</div>
-									<div class="resto__info">
-										<h5 class="resto__info__title">La palette du goût</h5>
-										<div class="resto__info__text">Ménilmontant</div>
-										<div class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
-									</div>
-								</a>
-							</div>
-							<div class="resto__card__box">
-								<a href="./page2.html">
-									<div class="resto__img">
-										<img class="resto__img-img" src="./img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="resto">
-										<div class="resto__img__label">Nouveau</div>
-									</div>
-									<div class="resto__info">
-										<h5 class="resto__info__title">La note enchantée</h5>
-										<div class="resto__info__text">Charonne</div>
-										<div class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
-									</div>
-								</a>
-							</div>
-							<div class="resto__card__box">
-								<a href="./page3.html">
-									<div class="resto__img">
-										<img class="resto__img-img" src="./img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="resto">
-									</div>
-									<div class="resto__info">
-										<h5 class="resto__info__title">À la française</h5>
-										<div class="resto__info__text">Cité Rouge</div>
-										<div class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
-									</div>
-								</a>
-							</div>
-							<div class="resto__card__box">
-								<a href="./page4.html">
-									<div class="resto__img">
-										<img class="resto__img-img" src="./img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="resto">
-									</div>
-									<div class="resto__info">
-										<h5 class="resto__info__title">Le délice des sens</h5>
-										<div class="resto__info__text">Folie-Méricourt</div>
-										<div class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
-									</div>
-								</a>
-							</div>
-						</div>
-					</div>
-				</section>
-			</main>
-			@@include('_footer.html',{})
-		</div>
-	</body>
+				</div>
+			</section>
+		</main>
+		@@include('_footer.html',{})
+	</div>
+</body>
+
 </html>
