--- a/#src/page3.html
+++ b/#src/page3.html
@@ -15,7 +15,10 @@
 					</div>
 					<div class="card__title__box">
 						<h1 class="card__title _title _title_h1">À la française</h1>
-						<div class="card__info__svg _heart"><i class="heart far fa-heart"></i></div>
+						<div class="card__info__svg _heart">
+							<i class="heart far fa-heart"></i>
+							<i class="heart fas fa-heart"></i>
+						</div>
 					</div>
 				</div>
 				<div class="list list-entrees">
