--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="fr">
-	 <head>
+<head>
 	<title>Ohmyfood</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<link rel="stylesheet" href="css/style.min.css">
 	<link rel="shortcut icon" href="./img/icons/heart.svg">
-	<meta name="robots" content="index, follow"> 
+	<meta name="robots" content="index, follow">
 	<!--<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://kit.fontawesome.com/1899c55c92.js" crossorigin="anonymous"></script>
 </head>
-	<body>
-		<div class="wrapper">
-			<header class="header">
+
+<body>
+	<div class="wrapper">
+		<header class="header">
 	<div class="header__container _container">
 		<div class="header__content">						
 			<a href="./index.html" class="header_link">
@@ -22,103 +23,117 @@
 		</div>
 	</div>
 </header>
-			<main class="page">
-				<div class="loader">
-					<div class="lds-ellipsis"></div>
+		<main class="page">
+			<div class="loader">
+				<div class="lds-ellipsis"></div>
+			</div>
+			<section class="search">
+				<div class="search__container">
+					<div class="search__geo">
+						<a href="" class="search__geo_link">
+							<img class="search_svg" src="./img/icons/map-marker-alt.svg" alt="map">
+							Paris, Bellevile</a>
+					</div>
+					<div class="search__more">
+						<h2 class="search__title _title">Réservez le menu qui<br /> vous convient</h2>
+						<p class="search__text">Découvrez des restaurants d'exception,<br /> séléctionnés par nos soins.</p>
+						<button class="search_btn main_btn btn">Explorer nos restaurants</button>
+					</div>
 				</div>
-				<section class="search">
-					<div class="search__container">
-						<div class="search__geo">
-							<a href="" class="search__geo_link">
-								<img class="search_svg" src="./img/icons/map-marker-alt.svg" alt="map">
-								Paris, Bellevile</a>
+				<!------------------------->
+				<div class="fonction__container _container">
+					<h2 class="fonction__title _title">Fonctionnement</h2>
+					<button class="fonction__btn btn">
+						<span class="fonction__btn_span">1</span>
+						<img class="fonction__btn_svg" src="./img/icons/mobile-alt.svg" alt="phone">
+						Choisissez un restaurant
+					</button>
+					<button class="fonction__btn btn">
+						<span class="fonction__btn_span">2</span>
+						<img class="fonction__btn_svg" src="./img/icons/list.svg" alt="list">
+						Composez votre menu
+					</button>
+					<button class="fonction__btn btn">
+						<span class="fonction__btn_span">3</span>
+						<img class="fonction__btn_svg" src="./img/icons/store.svg" alt="store">
+						Dégustez au restaurant
+					</button>
+				</div>
+			</section>
+			<!-------------------------------------------------------------------------------------->
+			<section class="restaurants">
+				<div class="resto _container">
+					<h2 class="resto__title _title">Restaurants</h2>
+					<div class="resto__container">
+						<div class="resto__card__box">
+							<a href="./page1.html">
+								<div class="resto__img">
+									<img class="resto__img-img" src="./img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+										alt="resto">
+									<div class="resto__img__label">Nouveau</div>
+								</div>
+								<div class="resto__info">
+									<h5 class="resto__info__title">La palette du goût</h5>
+									<div class="resto__info__text">Ménilmontant</div>
+									<div class="resto__info__svg _heart">
+										<i class="heart far fa-heart"></i>
+										<i class="heart fas fa-heart"></i>
+									</div>
+								</div>
+							</a>
 						</div>
-						<div class="search__more">
-							<h2 class="search__title _title">Réservez le menu qui<br /> vous convient</h2>
-							<p class="search__text">Découvrez des restaurants d'exception,<br /> séléctionnés par nos soins.</p>
-							<button class="search_btn main_btn btn">Explorer nos restaurants</button>
+						<div class="resto__card__box">
+							<a href="./page2.html">
+								<div class="resto__img">
+									<img class="resto__img-img" src="./img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="resto">
+									<div class="resto__img__label">Nouveau</div>
+								</div>
+								<div class="resto__info">
+									<h5 class="resto__info__title">La note enchantée</h5>
+									<div class="resto__info__text">Charonne</div>
+									<div class="resto__info__svg _heart">
+										<i class="heart far fa-heart"></i>
+										<i class="heart fas fa-heart"></i>
+									</div>
+								</div>
+							</a>
+						</div>
+						<div class="resto__card__box">
+							<a href="./page3.html">
+								<div class="resto__img">
+									<img class="resto__img-img" src="./img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="resto">
+								</div>
+								<div class="resto__info">
+									<h5 class="resto__info__title">À la française</h5>
+									<div class="resto__info__text">Cité Rouge</div>
+									<div class="resto__info__svg _heart">
+										<i class="heart far fa-heart"></i>
+										<i class="heart fas fa-heart"></i>
+									</div>
+								</div>
+							</a>
+						</div>
+						<div class="resto__card__box">
+							<a href="./page4.html">
+								<div class="resto__img">
+									<img class="resto__img-img" src="./img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+										alt="resto">
+								</div>
+								<div class="resto__info">
+									<h5 class="resto__info__title">Le délice des sens</h5>
+									<div class="resto__info__text">Folie-Méricourt</div>
+									<div class="resto__info__svg _heart">
+										<i class="heart far fa-heart"></i>
+										<i class="heart fas fa-heart"></i>
+									</div>
+								</div>
+							</a>
 						</div>
 					</div>
-				<!------------------------->				
-					<div class="fonction__container _container">
-						<h2 class="fonction__title _title">Fonctionnement</h2>
-						<button class="fonction__btn btn">
-							<span class="fonction__btn_span">1</span>
-							<img class="fonction__btn_svg" src="./img/icons/mobile-alt.svg" alt="phone">
-							Choisissez un restaurant
-						</button>
-						<button class="fonction__btn btn">
-							<span class="fonction__btn_span">2</span>
-							<img class="fonction__btn_svg" src="./img/icons/list.svg" alt="list">
-							Composez votre menu
-						</button>
-						<button class="fonction__btn btn">
-							<span class="fonction__btn_span">3</span>
-							<img class="fonction__btn_svg" src="./img/icons/store.svg" alt="store">
-							Dégustez au restaurant
-						</button>
-					</div>
-				</section>
-				<!-------------------------------------------------------------------------------------->
-				<section class="restaurants">
-					<div class="resto _container">
-						<h2 class="resto__title _title">Restaurants</h2>
-						<div class="resto__container">						
-							<div class="resto__card__box">
-								<a href="./page1.html">
-									<div class="resto__img">
-										<img class="resto__img-img" src="./img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="resto">
-										<div class="resto__img__label">Nouveau</div>
-									</div>
-									<div class="resto__info">
-										<h5 class="resto__info__title">La palette du goût</h5>
-										<div class="resto__info__text">Ménilmontant</div>
-										<div class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
-									</div>
-								</a>
-							</div>
-							<div class="resto__card__box">
-								<a href="./page2.html">
-									<div class="resto__img">
-										<img class="resto__img-img" src="./img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="resto">
-										<div class="resto__img__label">Nouveau</div>
-									</div>
-									<div class="resto__info">
-										<h5 class="resto__info__title">La note enchantée</h5>
-										<div class="resto__info__text">Charonne</div>
-										<div class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
-									</div>
-								</a>
-							</div>
-							<div class="resto__card__box">
-								<a href="./page3.html">
-									<div class="resto__img">
-										<img class="resto__img-img" src="./img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="resto">
-									</div>
-									<div class="resto__info">
-										<h5 class="resto__info__title">À la française</h5>
-										<div class="resto__info__text">Cité Rouge</div>
-										<div class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
-									</div>
-								</a>
-							</div>
-							<div class="resto__card__box">
-								<a href="./page4.html">
-									<div class="resto__img">
-										<img class="resto__img-img" src="./img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="resto">
-									</div>
-									<div class="resto__info">
-										<h5 class="resto__info__title">Le délice des sens</h5>
-										<div class="resto__info__text">Folie-Méricourt</div>
-										<div class="resto__info__svg _heart"><i class="heart far fa-heart"></i></div>
-									</div>
-								</a>
-							</div>
-						</div>
-					</div>
-				</section>
-			</main>
-			<footer class="footer">
+				</div>
+			</section>
+		</main>
+		<footer class="footer">
 	<div class="footer__container _container">
 		<ul class="menu-footer__list">
 			<li>
@@ -137,6 +152,7 @@
 		</ul>
 	</div>
 </footer>
-		</div>
-	</body>
+	</div>
+</body>
+
 </html>
